compiler/tests/en/errors/repeat_bad_step.salam
// EXPECT: E063
func main:
    repeat 1 to 10 by "two":
        println "x"
    end
end
